<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/black"
                                                   tools:context=".ProfileFragment" android:id="@+id/frameLayout2">
    <TextView
            android:text="@string/PROFILE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageProfile" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="36sp"
            android:textColor="@android:color/white"/>
    <Button
            android:text="@string/create_account"
            android:layout_width="392dp"
            android:layout_height="79dp"
            android:id="@+id/createAccount" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:background="@android:color/white"/>
    <TextView
            android:text="@string/PERSONAL_ATTRIBUTES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personalAttributes"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="@android:color/white"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/confirmPassword"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pageFirstName" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/personalAttributes" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/first_name"
            tools:textColor="@android:color/white" tools:textColorHint="@android:color/white"
            android:textColorHint="@android:color/white" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pageLastName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pageFirstName" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/last_name"
            tools:textColor="@android:color/white" tools:textColorHint="@android:color/white"
            android:textColorHint="@android:color/white" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/pageAge"
            android:hint="@string/age"
            tools:textColor="@android:color/white" tools:textColorHint="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pageLastName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>
    <Spinner
            android:layout_width="215dp"
            android:layout_height="41dp"
            android:id="@+id/genderSpinner"
            app:layout_constraintTop_toBottomOf="@+id/pageAge" app:layout_constraintStart_toEndOf="@+id/gender"
            android:layout_marginStart="8dp" android:background="@android:color/white"/>
    <TextView
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pageAge" android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent" tools:textColor="@android:color/white"
            android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailSignup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/pageProfile"
            android:hint="@string/email" android:textColor="@android:color/white"
            tools:textColorHint="@android:color/white" android:textColorHint="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordSignup" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailSignup" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:hint="@string/password" android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignup" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textColorHint="@android:color/white"
            android:hint="@string/confirm_password" android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>