<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout2"
                                                   android:background="@android:color/black">
    <TextView
            android:text="@string/DIET_TRACKING"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dietTracking" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="50sp" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/CALORIES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calories" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/dietTracking" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="35sp" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inputCalories" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calories" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/ENTER_CALORIES"
            android:textColor="@android:color/white" android:textColorHint="@android:color/white"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/WATER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/water" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/inputCalories" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="35sp" android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inputWater" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/water" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/ENTER_WATER" android:textSize="20sp"
            android:textColor="@android:color/white" android:textColorHint="@android:color/white"
    />
    <Button
            android:text="@string/ENTER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calories" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/enterCalories" android:background="@android:color/white"/>
    <Button
            android:text="@string/ENTER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterWater" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/water" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:background="@android:color/white"
    />
</androidx.constraintlayout.widget.ConstraintLayout>