<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/black"
                                                   tools:context=".LoginFragment" android:id="@+id/frameLayout">
    <TextView
            android:text="@string/FITNESS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fitness"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/theEdgeLogo"
            android:textSize="30sp"/>
    <Button
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/signupButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="75dp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            style="@android:style/Widget.Material.Light.Button.Inset"
            app:layout_constraintStart_toEndOf="@+id/signupButton" android:layout_marginEnd="75dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password"/>
    <TextView
            android:text="@string/AT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/at" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView4"/>
    <ImageView
            android:src="@drawable/theedge_logo"
            android:layout_width="330dp"
            android:layout_height="91dp"
            android:id="@+id/theEdgeLogo" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:src="@drawable/vt_logo"
            android:layout_width="177dp"
            android:layout_height="107dp"
            android:id="@+id/imageView4" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/fitness"
            android:hint="@string/email" android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@android:color/white" android:textColorHint="@android:color/white"
            android:id="@+id/password" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>